--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,12 @@ taxonomies = [
     {name = "tags", feed = true},
 ]
 
+after_dark_menu = [
+    {url = "$BASE_URL", name = "Home"},
+    {url = "$BASE_URL/categories", name = "Categories"},
+    {url = "$BASE_URL/tags", name = "Tags"},
+]
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
