Set after-dark title

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 # The URL the site will be built for
 base_url = "https://ambiso.github.io"
 
-title = "ambiso's blog"
+title = "ambiso"
+after_dark_title = "ambiso"
 description = "my excursion into cryptography, algorithms and security"
 
 # Whether to automatically compile all Sass files in the sass directory
