--- a/config.toml
+++ b/config.toml
@@ -2,13 +2,13 @@
 base_url = "https://ambiso.github.io"
 
 title = "ambiso"
-description = "my excursion into cryptography, algorithms and security"
+description = "excursions into cryptography, algorithms and security"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = false
 
 theme = "after-dark"
 
@@ -30,6 +30,6 @@ after_dark_title = "ambiso"
 
 after_dark_menu = [
     {url = "$BASE_URL", name = "Home"},
-    {url = "$BASE_URL/categories", name = "Categories"},
-    {url = "$BASE_URL/tags", name = "Tags"},
+    # {url = "$BASE_URL/categories", name = "Categories"},
+    # {url = "$BASE_URL/tags", name = "Tags"},
 ]
