--- a/config.toml
+++ b/config.toml
@@ -31,3 +31,6 @@ after_dark_menu = [
     {url = "$BASE_URL", name = "Home"},
     {url = "$BASE_URL/tags", name = "Tags"},
 ]
+
+katex_enable = true
+katex_auto_render = true
