--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ theme = "after-dark"
 
 taxonomies = [
     # You can enable/disable RSS
-    {name = "tags", feed = true},
+    {name = "categories", feed = true},
 ]
 
 [markdown]
@@ -29,7 +29,7 @@ after_dark_title = "ambiso"
 
 after_dark_menu = [
     {url = "$BASE_URL", name = "Home"},
-    {url = "$BASE_URL/tags", name = "Tags"},
+    {url = "$BASE_URL/categories", name = "Tags"},
 ]
 
 katex_enable = true
