--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ after_dark_title = "ambiso"
 
 after_dark_menu = [
     {url = "$BASE_URL", name = "Home"},
-    {url = "$BASE_URL/categories", name = "Tags"},
+    {url = "$BASE_URL/categories", name = "Categories"},
 ]
 
 katex_enable = true
