--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: build_and_deploy
-        uses: shalzz/zola-deploy-action@latest
+        uses: shalzz/zola-deploy-action@v0.17.1
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
