--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: build_and_deploy
-        uses: shalzz/zola-deploy-action@v0.17.1
+        uses: shalzz/zola-deploy-action@v0.19.1
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
           # Provide personal access token
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
